dist/1.0/bin/sample/retrieveUnpackaged/objects/Attribute_Set_Type_Relation__c.object
<CustomObject>
    <description>Stores relations between Attribute Set Type and Attribute</description>
    <fields>
        <fullName>Attribute_Label_English__c</fullName>
        <description>Technical field: contains Attribute&apos;s label in a specified language.</description>
        <formula>Attribute__r.Label_Eng__c</formula>
        <inlineHelpText>Technical field: contains Attribute&apos;s label in a specified language.</inlineHelpText>
        <label>Attribute Label (English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Label_Hungarian__c</fullName>
        <description>Technical field: contains Attribute&apos;s label in a specified language.</description>
        <formula>Attribute__r.Label_HUN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical field: contains Attribute&apos;s label in a specified language.</inlineHelpText>
        <label>Attribute Label (Hungarian)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Label_Polish__c</fullName>
        <description>Technical field: contains Attribute&apos;s label in a specified language.</description>
        <formula>Attribute__r.Label_POL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical field: contains Attribute&apos;s label in a specified language.</inlineHelpText>
        <label>Attribute Label (Polish)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Label_Slovak__c</fullName>
        <description>Technical field: contains Attribute&apos;s label in a specified language.</description>
        <formula>Attribute__r.Label_SVK__c</formula>
        <inlineHelpText>Technical field: contains Attribute&apos;s label in a specified language.</inlineHelpText>
        <label>Attribute Label (Slovak)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Set_Type__c</fullName>
        <description>Relation to Attribute Set Type</description>
        <inlineHelpText>Relation to Attribute Set Type</inlineHelpText>
        <label>Attribute Set Type</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Attribute Set Type Relations</relationshipLabel>
        <relationshipName>Attribute_Set_Type_Relations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <defaultValue>&quot;STRING&quot;</defaultValue>
        <description>Enumerator in Durian : AttributeSet/attributeType - not used in SFDC; During the conf call, STRING value has been approved as default;</description>
        <inlineHelpText>Enumerator in Durian : AttributeSet/attributeType - not used in SFDC</inlineHelpText>
        <label>Attribute Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Relation to Attribute definition.</description>
        <inlineHelpText>Relation to Attribute definition.</inlineHelpText>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Attribute Set Type Relations</relationshipLabel>
        <relationshipName>Attribute_Set_Type_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Billing system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Billing system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Length__c</fullName>
        <defaultValue>64</defaultValue>
        <description>Field not used in this object level in SFDC but required by Durian; Length of the value string - up to 64 characters</description>
        <inlineHelpText>Tehcnical field for SK: not used in SFDC, but required by Durian.</inlineHelpText>
        <label>Data Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of value - it is shown in Durian GUI</description>
        <inlineHelpText>Description of value - it is shown in Durian GUI</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <description>DAVO field: Maximum occurence. If maxCount &gt; 1, the attribute is a multivalue one.</description>
        <inlineHelpText>Technical field for SK: Maximum occurence (maxCount &gt;1 =&gt; multivalue attribute).</inlineHelpText>
        <label>Max Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>DAVO field: Minimum occurence of the attribute minCount=1 =&gt; attribute is mandatory</description>
        <inlineHelpText>Technical field for SK: Minimum occurence of the attribute (minCount=1 =&gt; attribute is mandatory)</inlineHelpText>
        <label>Min Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>DAVO field: Long description for administrative purposes only;</description>
        <inlineHelpText>Technical field for SK: long description for administrative purposes only.</inlineHelpText>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this definiton matches a definition in Billing system.</description>
        <inlineHelpText>Indicates if this definiton matches a definition in Billing system.</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <label>Attribute Set Type Relation</label>
    <nameField>
        <displayFormat>ASTR-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Set Type Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>